--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,13 @@ body
     color: #ccc;
 }
 
+.hidden
+{
+    position: absolute;
+    top: 0;
+    left: -10000px
+}
+
 #screen
 {
     position: absolute;
